# llvm

./: HPSC-FT-LLVM.md  clang.rej  d1.patch
clang/: CMakeLists.txt
clang/bindings/python/clang/: cindex.py
clang/include/clang-c/: Index.h
clang/include/clang/AST/: ASTFwd.h  ASTNodeTraverser.h  ASTTypeTraits.h  DeclFT.h  DeclOpenMP.h  FTClause.h  JSONNodeDumper.h  OpenMPClause.h  RecursiveASTVisitor.h  StmtFT.h  StmtOpenMP.h  StmtVisitor.h  TextNodeDumper.h
clang/include/clang/ASTMatchers/: ASTMatchers.h
clang/include/clang/Basic/: Attr.td  DiagnosticGroups.td  DiagnosticParseKinds.td  DiagnosticSemaKinds.td  FTKinds.h  LangOptions.def  StmtNodes.td  TokenKinds.def
clang/include/clang/Config/: config.h.cmake
clang/include/clang/Driver/: Options.td
clang/include/clang/Parse/: Parser.h
clang/include/clang/Sema/: Scope.h  Sema.h
clang/include/clang/Serialization/: ASTBitCodes.h  ASTRecordReader.h  ASTRecordWriter.h
clang/lib/AST/: ASTStructuralEquivalence.cpp  CMakeLists.txt  FTClause.cpp  JSONNodeDumper.cpp  OpenMPClause.cpp  Stmt.cpp  StmtFT.cpp  StmtOpenMP.cpp  StmtPrinter.cpp  StmtProfile.cpp  TextNodeDumper.cpp
clang/lib/ASTMatchers/: ASTMatchersInternal.cpp
clang/lib/ASTMatchers/Dynamic/: Registry.cpp
clang/lib/Analysis/: UninitializedValues.cpp
clang/lib/Basic/: CMakeLists.txt  FTKinds.cpp  OpenMPKinds.cpp
clang/lib/CodeGen/: BackendUtil.cpp  CGAtomic.cpp  CGCall.cpp  CGExpr.cpp  CGExprAgg.cpp  CGExprComplex.cpp  CGExprScalar.cpp  CGFTRuntime.cpp  CGFTRuntime.h  CGObjC.cpp  CGOpenMPRuntime.cpp  CGOpenMPRuntime.h  CGOpenMPRuntimeGPU.cpp  CGOpenMPRuntimeGPU.h  CGStmt.cpp  CGStmtNMR.cpp  CGStmtOpenMP.cpp  CMakeLists.txt  CodeGenFunction.h  CodeGenModule.cpp  CodeGenModule.h
clang/lib/CodeGen/Targets/: AMDGPU.cpp  NVPTX.cpp
clang/lib/Driver/: Driver.cpp
clang/lib/Driver/ToolChains/: Clang.cpp  CommonArgs.cpp  CommonArgs.h  Gnu.cpp
clang/lib/Frontend/: CompilerInvocation.cpp
clang/lib/Parse/: CMakeLists.txt  ParseFT.cpp  ParseOpenMP.cpp  ParsePragma.cpp  ParseStmt.cpp  Parser.cpp
clang/lib/Sema/: CMakeLists.txt  JumpDiagnostics.cpp  SemaDeclAttr.cpp  SemaExceptionSpec.cpp  SemaFT.cpp  SemaOpenMP.cpp  TreeTransform.h
clang/lib/Serialization/: ASTReader.cpp  ASTReaderStmt.cpp  ASTWriter.cpp  ASTWriterStmt.cpp
clang/lib/StaticAnalyzer/Core/: ExprEngine.cpp
clang/test/OpenMP/: target_teams_codegen.cpp
clang/tools/libclang/: CIndex.cpp  CXCursor.cpp
compiler-rt/lib/scudo/standalone/: mem_map.h
flang/: CMakeLists.txt
flang-rt/unittests/FortranRuntime/: RuntimeCrashTest.cpp
flang/lib/Decimal/: CMakeLists.txt
flang/lib/Semantics/: check-omp-structure.cpp
flang/runtime/: CMakeLists.txt
flang/test/Driver/: linker-flags.f90
ft/: CMakeLists.txt
ft/cmake/: HandleFTOptions.cmake  config-ix.cmake
ft/cmake/DetectTestCompiler/: CMakeLists.txt
ft/runtime/: CMakeLists.txt
ft/runtime/cmake/: LibftGetArchitecture.cmake  LibftHandleFlags.cmake  LibftUtils.cmake
ft/runtime/src/: CMakeLists.txt  ft_lib.cpp  ft_utility.cpp  kft.h  kft_lib.cpp
ft/runtime/src/include/: ft.h.var
lld/COFF/: MinGW.cpp
llvm/: CMakeLists.txt
llvm/hpsc_test_apps/: HPSCCFA_README.md  cfa_factorial_recursion.c  cfa_loop_demo  cfa_loop_demo.c  cfa_loop_demo_func.c  cfa_loop_demo_old.c  demo.c  hello.c
llvm/hpsc_test_apps/assembly/: cfa_loop_demo_riscv_CFADebug_GDB.txt  cfa_loop_demo_riscv_CFA_GDB.txt  cfa_loop_demo_riscv_GDB.txt
llvm/hpsc_test_apps/hpsc_scripts/: cfg_riscv.sh  cfg_x86.sh  find_phi_no_pred.py  generate_riscv_executables.sh  generate_x86_executables.sh  riscv_config.sh
llvm/include/llvm/Frontend/: CMakeLists.txt
llvm/include/llvm/Frontend/FT/: CMakeLists.txt  FT.td  FTConstants.h  FTIRBuilder.h  FTKinds.def
llvm/include/llvm/Frontend/OpenMP/: OMP.td  OMPIRBuilder.h  OMPKinds.def
llvm/include/llvm/Transforms/FT/: FT.h
llvm/include/llvm/Transforms/Utils/: FT.h  HPSCCFA.h
llvm/lib/: CMakeLists.txt
llvm/lib/Frontend/: CMakeLists.txt
llvm/lib/Frontend/FT/: CMakeLists.txt  FT.cpp  FTIRBuilder.cpp
llvm/lib/Frontend/OpenMP/: OMPIRBuilder.cpp
llvm/lib/Passes/: PassBuilder.cpp  PassRegistry.def
llvm/lib/Transforms/: CMakeLists.txt
llvm/lib/Transforms/Utils/: CMakeLists.txt  FT.cpp  HPSCCFA.cpp
llvm/projects/: CMakeLists.txt
llvm/runtimes/: CMakeLists.txt
llvm/utils/gn/secondary/clang/include/clang/Config/: BUILD.gn
llvm/utils/gn/secondary/clang/lib/Basic/: BUILD.gn
llvm/utils/gn/secondary/clang/lib/Sema/: BUILD.gn
llvm/utils/gn/secondary/llvm/include/llvm/Frontend/FT/: BUILD.gn
llvm/utils/gn/secondary/llvm/lib/IR/: BUILD.gn
mlir/include/mlir/Dialect/: CMakeLists.txt
mlir/include/mlir/Dialect/FT/: CMakeLists.txt
runtimes/: CMakeLists.txt
utils/bazel/llvm-project-overlay/llvm/: BUILD.bazel
