import("//llvm/utils/TableGen/tablegen.gni")

tablegen("FTh") {
  visibility = [ ":public_tablegen" ]
  args = [ "-gen-directive-decl" ]
  output_name = "FT.h.inc"
  td_file = "FT.td"
}

tablegen("FT") {
  visibility = [ ":public_tablegen" ]
  args = [ "-gen-directive-impl" ]
}

# Groups all tablegen() calls that create .inc files that are included in
# Frontent/OpenMP's public headers (just one so far).
# //llvm/lib/Frontend/FT has this as a public_dep, so targets depending on
# //llvm/lib/Frontend/FT don't need to depend on this.
group("public_tablegen") {
  public_deps = [
    # Frontend/FT's public headers include FT.h.inc.
    ":FT",
    ":FTh",
  ]
}
